# source2-demo

./: .gitignore  Cargo.toml  ON_ENTITY_PROPERTY_CHANGED.md  OPTIMIZATION_DIRECTIONS.md  README.md
d2-examples/: Cargo.toml
d2-examples/chat/: Cargo.toml
d2-examples/chat/src/: main.rs
d2-examples/combatlog/: Cargo.toml
d2-examples/combatlog/src/: main.rs
d2-examples/lifestate/: Cargo.toml
d2-examples/lifestate/src/: main.rs
d2-examples/opendota/: .rustfmt.toml  Cargo.toml
d2-examples/opendota/src/: game_time.rs  main.rs  wards.rs
d2-examples/remove-chat/: Cargo.toml
d2-examples/remove-chat/src/: main.rs
d2-examples/wards/: Cargo.toml
d2-examples/wards/src/: main.rs  wards.rs
dl-examples/: Cargo.toml
dl-examples/anonymize-replay/: Cargo.toml
dl-examples/anonymize-replay/src/: main.rs
dl-examples/chat/: Cargo.toml
dl-examples/chat/src/: main.rs
dl-examples/damage-events/: Cargo.toml
dl-examples/damage-events/src/: main.rs
dl-examples/death-events/: Cargo.toml
dl-examples/death-events/src/: main.rs
dl-examples/lifestate/: Cargo.toml
dl-examples/match-details/: Cargo.toml
scripts/: sync-upstream.sh
source2-demo/: Cargo.toml  README.md
source2-demo-macros/: Cargo.toml
source2-demo-macros/src/: lib.rs  observer_impl.rs  protobuf_map.rs  rewriter_impl.rs  type_utils.rs
source2-demo-protobufs/: Cargo.toml  README.md  build.rs  citadel.rs  common.rs  cs2.rs  dota.rs  lib.rs  update-protobufs.sh
source2-demo-protobufs/protos/common/: demo.proto
source2-demo-protobufs/protos/cs2/: cstrike15_usermessages.proto
source2-demo/src/: display.rs  error.rs  lib.rs  macros.rs  tests.rs
source2-demo/src/entity/: baseline.rs  class.rs  container.rs  mod.rs
source2-demo/src/entity/field/: decoder.rs  mod.rs  model.rs  path.rs  serializer.rs  state.rs  type.rs  value.rs
source2-demo/src/event/: combat_log.rs  definition.rs  list.rs  mod.rs  value.rs
source2-demo/src/parser/: context.rs  mod.rs  observer.rs
source2-demo/src/parser/demo/: commands.rs  messages.rs  mod.rs  runner.rs  svc.rs  writer.rs
source2-demo/src/parser/demo/writer/: baseline.rs  emit.rs  entity.rs  input.rs  mod.rs  packet.rs  packet_state.rs  raw.rs  rewriter.rs  run.rs  string_table.rs  types.rs
source2-demo/src/reader/: bits.rs  mod.rs  msg.rs  seekable.rs  slice.rs
source2-demo/src/reader/field/: huff.rs  mod.rs  op.rs
source2-demo/src/stream/: bits.rs  copy.rs  mod.rs  msg.rs
source2-demo/src/stream/field_path/: codec.rs  copy.rs  mod.rs  ops.rs
source2-demo/src/stream/reader/: field.rs  mod.rs  msg.rs  seekable.rs  slice.rs
source2-demo/src/stream/writer/: bitstream.rs  message.rs  mod.rs  varint.rs
source2-demo/src/string_table/: container.rs  mod.rs  rewrite.rs  row.rs
(+2 files in other folders)
