[workspace]
members = [
    "source2-demo",
    "source2-demo-protobufs",
    "source2-demo-macros",
]

resolver = "2"

[workspace.package]
version = "0.5.0"
authors = ["Artem Rupasov <artemrupasov125@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rupas1k/source2-demo"
edition = "2021"
rust-version = "1.79"
