[package]
name = "source2-demo-macros"
description = "Procedural macros for Source 2 replay parser"
categories = ["parsing"]
keywords = ["dota", "deadlock", "cs2", "replay", "demo"]
readme = "README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
dota = []
citadel = []
cs2 = []
