[package]
name = "source2-demo-protobufs"
description = "Dota 2, Deadlock, and CS2 Protobufs"
categories = ["parsing"]
keywords = ["dota", "deadlock", "cs2", "replay", "demo"]
readme = "README.md"
exclude = ["protos/*", "build.rs", "update_protos.sh"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "./lib.rs"

[build-dependencies]
prost-build = "0.14"
itertools = "0.14"
ureq = "3.1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
prost = "0.14"

[features]
dota = []
citadel = []
cs2 = []