[package]
name = "source2-demo"
description = "Dota 2 / Deadlock / CS2 replay parser written in Rust"
readme = "README.md"
categories = ["parsing"]
keywords = ["dota", "deadlock", "cs2", "replay", "demo"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hashbrown = "0.17"
rustc-hash = "2.1"
snap = "1.1"
bitter = "0.9"
thiserror = "2.0"
anyhow = "1.0"
prettytable = { version = "0.10", default-features = false }
bitflags = "2.10"
mimalloc = { version = "0.1", optional = true }
source2-demo-protobufs = { path = "../source2-demo-protobufs", version = "0.5.2" }
source2-demo-macros = { path = "../source2-demo-macros", version = "0.5.2" }

[features]
default = ["mimalloc"]

unsafe = []

dota = ["source2-demo-protobufs/dota", "source2-demo-macros/dota"]
deadlock = ["source2-demo-protobufs/citadel", "source2-demo-macros/citadel"]
cs2 = ["source2-demo-protobufs/cs2", "source2-demo-macros/cs2"]
